<resources>
    <string name="app_name">AppleDiseaseClassificator</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Signup</string>
    <string name="go_to_login">Go to Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="go_back_to_login_page">Go back to login page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_data_please_wait">Getting data, please wait...</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="open_the_gallery">Open the gallery</string>
    <string name="start_recommendation_system">Start recommendation system</string>
</resources>