<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/edit_text_round"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edit_text_round"
        android:layout_margin="2dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvGoToSignup"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:text="@string/don_t_have_an_account"/>

    <TextView
        android:id="@+id/tvPasswordReset"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textStyle="bold"
        android:text="@string/forgot_your_password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>