<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassifyDiseaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:background="@drawable/logo"
        android:layout_height="300dp" />

         <TextView
             android:id="@+id/tvClass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:textSize="30sp"
             android:text="-"
             android:gravity="center_horizontal"
             android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnOpenGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_the_gallery"
                android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnCreateRecommendationSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_recommendation_system"
            android:visibility="gone"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/dark_gray"
            android:text="Take a picture or load an image from gallery to start a recommendation system"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"/>


    </LinearLayout>


</FrameLayout>